--- a/app/views/result.html
+++ b/app/views/result.html
@@ -1,13 +1,12 @@
-<div ng-hide="resultsLoading" class="container-fluid no-left-right-padding" id="result-page" ng-swipe-left="toggleSidebar()" ng-swipe-right="toggleSidebar()">
+<div ng-hide="resultsLoading" class="container-fluid no-left-right-padding" id="result-page">
 	<div class="row">
-		<div class="col-sm-4 col-md-4 col-lg-3 no-left-right-padding sidebar-offcanvas left" id="sidebar" ng-class="{'active': sidebar}">
+		<div class="col-sm-4 col-md-4 col-lg-3 no-left-right-padding sidebar-offcanvas left" id="sidebar">
 			<div class="row">
 				<div class="col-md-12">
-					<h3 style="margin-top: 0px; padding-left:2px;">
+					<h3 style="margin-top: 0px; padding-left:2px; margin-bottom: 8px;">
 						<small>Found {{practices.length}} practices within
 							<select ng-disabled="radiuses.practices.length === 0" ng-model="selectedRadius" ng-init="selectedRadius = '0'" ng-options="key as value.name for (key, value) in radiuses" ng-change="changeRadius(selectedRadius)"></select>
 						</small>
-						<a type="button" class="sidebar-toggle btn btn-default btn-lg pull-right visible-xs" style="margin-bottom: 0px;" ng-click="toggleSidebar()"><span ng-class="(sidebar==1) ? 'glyphicon-menu-right' : 'glyphicon-menu-left'" class="glyphicon"></span></a>
 					</h3>
 					<h3 ng-show="christchurch"><small><i class="fa fa-exclamation-triangle"></i> Limited fee data available for Christchurch. For a more complete list of Christchurch practices visit <a href="http://www.pegasus.health.nz/gp-locator" target="_blank">Pegasus Health</a></small></h3>
 				</div>
@@ -32,9 +31,13 @@
 			<h3 class="no-up-down-padding" style="padding-left:2px;"><small>Fees are for enrolled patients. <a ng-click="openDialog()" href="">More</a></small></h3>
 		</div>
 		<div class="col-sm-8 col-md-8 col-lg-9 no-left-right-padding" id="map_view">
+			<div id="overlay"></div>
+			<button class="btn btn-default visible-xs" style="position: absolute; top: 1px;" type="button" ng-click="openSidebar()">
+				<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+			</button>
 			<uib-tabset>
 				<uib-tab heading="Map" active="map.active">
-					<div id="map_canvas" ng-hide="noPractices()" ng-controller="MapCtrl" ng-swipe-right="cancelSwipe($event)" ng-swipe-left="cancelSwipe($event)">
+					<div id="map_canvas" ng-hide="noPractices()" ng-controller="MapCtrl">
 						<leaflet id="leaflet_map" height="300px" width="100%" paths="paths" tiles="tiles"></leaflet>
 					</div>
 					<h4 class="text-left" ng-show="noPractices()">No practices found near you.</h4>
