Support serverside sorting of practices, add ability to filter out non-enrolling practices, tweaks to how things are displayed

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -249,6 +249,15 @@ input[type=number] {
   color: white;
 }
 
+.transparent {
+  opacity: 0.5;
+  z-index: 0 !important;
+}
+
+.awesome-marker {
+  z-index: 1;
+}
+
 #map_view {
   overflow-y: hidden;
 }
