--- a/app/views/info.html
+++ b/app/views/info.html
@@ -11,7 +11,7 @@
     <div class="row">
       <h3>Where's all the data coming from?</h3>
       <p>In most cases the data comes directly from the websites of PHOs.</p>
-      <p>You can see the sources used and freshness of the data at <a href="https://stats.doctorpricer.co.nz" title="DoctorPricer Stats">stats.doctorpricer.co.nz</a>.</p>
+      <p>You can see the sources used and freshness of the data at <a href="https://data.doctorpricer.co.nz" title="DoctorPricer Data">data.doctorpricer.co.nz</a>.</p>
     </div>
     <div class="row">
       <h3>Important Information</h3>
@@ -31,7 +31,7 @@
         <input type="hidden" name="hosted_button_id" value="EXKPZ7P8DE9EL">
         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-      </form>      
+      </form>
     </div>
     <div class="row">
       <h3>Contact</h3>
