--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="centre-container" ng-hide="resultsLoading">
   <div class="centre-content">
-    <h3 class="tagline">Compare fees from over 800 NZ practices.</h3>
+    <h3 class="tagline">Compare fees from 1000+ NZ practices.</h3>
     <form name="form" ng-submit="next()" class="form" novalidate>
       <div
         class="form-group"
