--- a/app/views/info.html
+++ b/app/views/info.html
@@ -11,7 +11,7 @@
     <div class="row">
       <h3>Where's all the data coming from?</h3>
       <p>In most cases the data comes directly from the websites of PHOs.</p>
-      <p>You can see the sources used and freshness of the data at <a href="https://data.doctorpricer.co.nz" title="DoctorPricer Data">data.doctorpricer.co.nz</a>.</p>
+      <p>You can see the sources used, freshness of the data, and other interesting stats at <a href="https://data.doctorpricer.co.nz" title="DoctorPricer Data">data.doctorpricer.co.nz</a>.</p>
     </div>
     <div class="row">
       <h3>Important Information</h3>
@@ -21,6 +21,7 @@
         <li>Some practices may have enrolment restrictions</li>
         <li>Only practices which are currently taking patients are displayed</li>
         <li>Pegasus PHO are the only PHO in the country who don't share fee data, so unfortunately only a fraction of the practices in Christchurch are available</li>
+        <li>Fees may not be 100% accurate all the time because it's based on data scraped from websites which aren't 100% accurate all the time</li>
       </ul>
     </div>
     <div class="row">
