--- a/app/views/main.html
+++ b/app/views/main.html
@@ -53,7 +53,7 @@
       >
         <div class="col-xs-12 nopadding">
           <div class="col-xs-12 col-lg-9 nopadding" style="text-align: left;">
-            <h4 style="margin-bottom: 0px;">Do you have a <a href="https://www.workandincome.govt.nz/products/a-z-benefits/community-services-card.html" target="_blank">Community Services Card?</a></h4>
+            <h4 style="margin-bottom: 0px; margin-top: 13px; padding-left: 16px;">Do you have a <a href="https://www.workandincome.govt.nz/products/a-z-benefits/community-services-card.html" target="_blank">Community Services Card?</a></h4>
           </div>
           <div class="col-xs-12 col-lg-3 nopadding csc-boxes form-group">
             <div class="form-check form-check-inline">
@@ -95,6 +95,7 @@
     <h3>{{error}}</h3>
     <!-- <h1>DoctorPricer is currently offline for maintenance. Check back in a couple of hours.</h1> -->
   </div>
+  <p style="padding-top: 30px;">Read the <a style="color: fuchsia" href="/fees-report">2024 GP Fees Report</a></p>
 </div>
 <loading-message></loading-message>
 <stupid-ad></stupid-ad>
