--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="centre-container" ng-hide="resultsLoading">
-  <div class="centre-content">
+  <!-- <div class="centre-content">
     <h3 class="tagline">Compare fees from 1000+ NZ practices.</h3>
     <form name="form" ng-submit="next()" class="form" novalidate>
       <div
@@ -93,9 +93,36 @@
       </div>
     </form>
     <h3>{{error}}</h3>
-    <!-- <h1>DoctorPricer is currently offline for maintenance. Check back in a couple of hours.</h1> -->
+  </div> -->
+  <div class="goodbye">
+    <h1>DoctorPricer can no longer exist</h1>
+    <p>Hi. I have been the sole maintainer of DoctorPricer since I started it a decade ago.</p>
+    <p>During this period, I did my best to keep things up to date in my spare time, working independently of any
+      government organisation and against a dysfunctional underfunded health system which positions primary care
+      operators as competitors.
+    <p>Unfortunately it's become increasingly clear that this is no longer tenable and the amount of work required to
+      ensure fees are up to date is more than I can manage.</p>
+    <p><strong>Rather than mislead people with possibly incorrect information, I've decided to take it down.</strong>
+    </p>
+    <p>I hope it's been useful to people. I've never made money (the single ad barely covered hosting costs) but that's
+      not what it was about. Not everything we do has to be in pursuit of profit and I implore anyone with skills and
+      time to make something useful for the community.</p>
+    <p><strong>If you work at or around Te Whatu Ora and would like to support me by supplying regular up to date fee
+        data,
+        please let me know at <a href="mailto:doctorpricernz@gmail.com.">doctorpricernz@gmail.com</a>.</strong>
+    </p>
+    <p> It's a
+      useful service and I'd love to bring it back.</p>
   </div>
-  <p style="padding-top: 30px;">Read the <a style="color: fuchsia" href="/fees-report">2024 GP Fees Report</a></p>
 </div>
 <loading-message></loading-message>
-<stupid-ad></stupid-ad>
+
+<style>
+  .goodbye {
+    max-width: 640px;
+  }
+
+  .goodbye p {
+    font-size: 18px;
+  }
+</style>
